Refactor global exception and make validator for enum and use same.